[gd_scene load_steps=15 format=3 uid="uid://cu0kmvxlsrkxt"]

[ext_resource type="Script" uid="uid://bd32rorhrh8y3" path="res://card_1_control.gd" id="1_wgmv5"]
[ext_resource type="Shader" uid="uid://saieheb3epv5" path="res://cardPixelation.gdshader" id="1_wjatr"]
[ext_resource type="Texture2D" uid="uid://dbeeebsanq6ob" path="res://card.png" id="2_wgmv5"]
[ext_resource type="Texture2D" uid="uid://ca1wt1wbj258b" path="res://images/Rows.png" id="3_0qutb"]
[ext_resource type="Texture2D" uid="uid://cmpvplpr25fx" path="res://bottomCard.png" id="4_kne4k"]
[ext_resource type="Theme" uid="uid://cdqannvs4mgim" path="res://lineedit.tres" id="5_c0fjr"]
[ext_resource type="FontFile" uid="uid://bogbaja756dmg" path="res://Minecraft.ttf" id="6_opwdb"]
[ext_resource type="AudioStream" uid="uid://c0ih3ucqqqp58" path="res://audio/card_flip_1.mp3" id="8_0qutb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ta5nu"]
shader = ExtResource("1_wjatr")
shader_parameter/amount = 40

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tyrfw"]

[sub_resource type="GDScript" id="GDScript_2ihbs"]
script/source = "extends LineEdit

func _ready() -> void:
	pass;
	
"

[sub_resource type="Animation" id="Animation_tyrfw"]
resource_name = "CardFlip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PanelContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CardBackImage:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../PanelContainer:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../PanelContainer:z_index")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1, 0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%ExerciseLabel:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("%ExerciseLabel:z_index")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("%TextureRect2/../AnimationPlayer/AudioStreamPlayer2D:stream")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_0qutb")]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("%TextureRect2/../AnimationPlayer/AudioStreamPlayer2D:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_eod45"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PanelContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CardBackImage:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../PanelContainer:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../PanelContainer:z_index")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%ExerciseLabel:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("%ExerciseLabel:z_index")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("%TextureRect2/../CardBackImage:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("%TextureRect2/../AnimationPlayer/AudioStreamPlayer2D:stream")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_0qutb")]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("%TextureRect2/../AnimationPlayer/AudioStreamPlayer2D:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nwk8b"]
_data = {
&"CardFlip": SubResource("Animation_tyrfw"),
&"RESET": SubResource("Animation_eod45")
}

[node name="Card1Control" type="Control" node_paths=PackedStringArray("button_submit_1", "button_submit_2", "button_submit_3", "weight_write_1", "weight_write_2", "weight_write_3", "rep_write_1", "rep_write_2", "rep_write_3", "exercise_label", "exercise_texture", "animation_player")]
layout_mode = 3
anchors_preset = 0
offset_left = 60.0
offset_top = 196.0
offset_right = 361.0
offset_bottom = 623.0
script = ExtResource("1_wgmv5")
button_submit_1 = NodePath("PanelContainer/VScrollBar/HBoxContainer1/ButtonSubmit1")
button_submit_2 = NodePath("PanelContainer/VScrollBar/HBoxContainer2/ButtonSubmit2")
button_submit_3 = NodePath("PanelContainer/VScrollBar/HBoxContainer3/ButtonSubmit3")
weight_write_1 = NodePath("PanelContainer/VScrollBar/HBoxContainer1/WeightWrite1")
weight_write_2 = NodePath("PanelContainer/VScrollBar/HBoxContainer2/WeightWrite2")
weight_write_3 = NodePath("PanelContainer/VScrollBar/HBoxContainer3/WeightWrite3")
rep_write_1 = NodePath("PanelContainer/VScrollBar/HBoxContainer1/RepWrite1")
rep_write_2 = NodePath("PanelContainer/VScrollBar/HBoxContainer2/RepWrite2")
rep_write_3 = NodePath("PanelContainer/VScrollBar/HBoxContainer3/RepWrite3")
exercise_label = NodePath("ExerciseLabel")
exercise_texture = NodePath("TextureRect2")
animation_player = NodePath("AnimationPlayer")

[node name="CardBackImage" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ta5nu")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150.5, 213.5)
texture = ExtResource("2_wgmv5")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="."]
unique_name_in_owner = true
z_index = -1
material = SubResource("ShaderMaterial_ta5nu")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150.5, 213.5)
texture = ExtResource("3_0qutb")
expand_mode = 1
stretch_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
z_index = -1
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.937
anchor_bottom = 0.963
offset_left = 19.0
offset_top = 246.0
offset_right = -0.0370178
offset_bottom = -0.201019
scale = Vector2(0.1, 1)
pivot_offset = Vector2(131.5, 82.5)

[node name="TextureRect3" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("4_kne4k")
expand_mode = 1

[node name="VScrollBar" type="VScrollBar" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer1" type="HBoxContainer" parent="PanelContainer/VScrollBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 33.25
anchor_right = 33.25
offset_left = -247.0
offset_top = 8.0
offset_right = -20.0
offset_bottom = 39.0
theme_override_constants/separation = 13

[node name="WeightWrite1" type="LineEdit" parent="PanelContainer/VScrollBar/HBoxContainer1"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_tyrfw")
layout_mode = 2
theme = ExtResource("5_c0fjr")
placeholder_text = "XX"
alignment = 1
max_length = 3
emoji_menu_enabled = false
virtual_keyboard_type = 2

[node name="WeightLabel" type="Label" parent="PanelContainer/VScrollBar/HBoxContainer1"]
layout_mode = 2
text = "Kg"

[node name="RepWrite1" type="LineEdit" parent="PanelContainer/VScrollBar/HBoxContainer1"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_tyrfw")
layout_mode = 2
theme = ExtResource("5_c0fjr")
placeholder_text = "XX"
alignment = 1
max_length = 3
virtual_keyboard_type = 2
script = SubResource("GDScript_2ihbs")

[node name="RepsLabel" type="Label" parent="PanelContainer/VScrollBar/HBoxContainer1"]
layout_mode = 2
text = "Reps"

[node name="ButtonSubmit1" type="Button" parent="PanelContainer/VScrollBar/HBoxContainer1"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_c0fjr")
theme_override_fonts/font = ExtResource("6_opwdb")
text = "✓"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VScrollBar"]
unique_name_in_owner = true
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 33.25
anchor_right = 33.25
offset_left = -247.0
offset_top = 57.0
offset_right = -20.0
offset_bottom = 88.0
theme_override_constants/separation = 13

[node name="WeightWrite2" type="LineEdit" parent="PanelContainer/VScrollBar/HBoxContainer2"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_tyrfw")
layout_mode = 2
theme = ExtResource("5_c0fjr")
placeholder_text = "XX"
alignment = 1
max_length = 3
virtual_keyboard_type = 2

[node name="WeightLabel" type="Label" parent="PanelContainer/VScrollBar/HBoxContainer2"]
layout_mode = 2
text = "Kg"

[node name="RepWrite2" type="LineEdit" parent="PanelContainer/VScrollBar/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_c0fjr")
placeholder_text = "XX"
alignment = 1
max_length = 3
virtual_keyboard_type = 2

[node name="RepsLabel" type="Label" parent="PanelContainer/VScrollBar/HBoxContainer2"]
layout_mode = 2
text = "Reps"

[node name="ButtonSubmit2" type="Button" parent="PanelContainer/VScrollBar/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_c0fjr")
theme_override_fonts/font = ExtResource("6_opwdb")
text = "✓"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VScrollBar"]
unique_name_in_owner = true
layout_direction = 1
layout_mode = 1
anchors_preset = -1
offset_left = 19.0
offset_top = 107.0
offset_right = 246.0
offset_bottom = 138.0
theme_override_constants/separation = 13

[node name="WeightWrite3" type="LineEdit" parent="PanelContainer/VScrollBar/HBoxContainer3"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_tyrfw")
layout_mode = 2
theme = ExtResource("5_c0fjr")
placeholder_text = "XX"
alignment = 1
max_length = 3
virtual_keyboard_type = 2

[node name="WeightLabel" type="Label" parent="PanelContainer/VScrollBar/HBoxContainer3"]
layout_mode = 2
text = "Kg"

[node name="RepWrite3" type="LineEdit" parent="PanelContainer/VScrollBar/HBoxContainer3"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_tyrfw")
layout_mode = 2
theme = ExtResource("5_c0fjr")
placeholder_text = "XX"
alignment = 1
max_length = 3
virtual_keyboard_type = 2

[node name="RepsLabel" type="Label" parent="PanelContainer/VScrollBar/HBoxContainer3"]
layout_mode = 2
text = "Reps"

[node name="ButtonSubmit3" type="Button" parent="PanelContainer/VScrollBar/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_c0fjr")
theme_override_fonts/font = ExtResource("6_opwdb")
text = "✓"

[node name="ExerciseLabel" type="Label" parent="."]
unique_name_in_owner = true
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = 39.0
offset_right = -58.0
offset_bottom = -356.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 1)
pivot_offset = Vector2(92, 16)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_opwdb")
theme_override_font_sizes/font_size = 20
text = "Exercise Name"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../TextureRect2")
libraries = {
&"": SubResource("AnimationLibrary_nwk8b")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="AnimationPlayer"]
stream = ExtResource("8_0qutb")

[connection signal="button_up" from="PanelContainer/VScrollBar/HBoxContainer1/ButtonSubmit1" to="." method="_on_button_submit_1_button_up"]
[connection signal="button_up" from="PanelContainer/VScrollBar/HBoxContainer2/ButtonSubmit2" to="." method="_on_button_submit_2_button_up"]
[connection signal="button_up" from="PanelContainer/VScrollBar/HBoxContainer3/ButtonSubmit3" to="." method="_on_button_submit_3_button_up"]
